--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "next": "14.2.5",
@@ -21,5 +22,8 @@
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.9",
     "typescript": "5.5.4"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
