--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.0",
     "@types/node": "22.2.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.41",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.52.2",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.9",
-    "typescript": "5.5.4"
-  },
-  "devDependencies": {
-    "daisyui": "^4.12.10"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.5.4",
+    "zod": "^3.23.8"
   }
 }
